# evoidea

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.beads/: issues.jsonl
.beads/export-state/: b077625f7c6cf093.json
.claude/: ralph-loop.local.md
.claude/commands/: evoidea.md
.codex/skills/evo-ideator/: SKILL.md
.codex/skills/evo-ideator/references/: RUNBOOK.md  TROUBLESHOOTING.md
.codex/skills/evo-ideator/scripts/: run_evoidea.sh
docs/plans/: 2026-01-23-evoidea-mvp-design.md  2026-01-23-evoidea-skill-architecture.md  2026-01-24-leakscope-github-action.md  2026-01-29-preference-learning-loop-design.md
evoidea_codex_bundle_md/: AGENTS.md  INDEX.md  README.md
evoidea_codex_bundle_md/docs/: 00_SPEC.md  01_ARCHITECTURE.md  02_DATA_MODEL.md  03_PIPELINE.md  04_PROMPTS.md  05_STORAGE.md  06_CLI.md  07_TEST_PLAN.md  08_EVALS.md  09_IMPLEMENTATION_TASKS.md
evoidea_codex_bundle_md/non_md/: README.md
evoidea_codex_bundle_md/non_md/codex_skill_scripts/: run_evoidea.sh.md
evoidea_codex_bundle_md/non_md/evals/: evo-ideator.prompts.csv.md  run-evals.mjs.md
evoidea_codex_bundle_md/non_md/schemas/: SCHEMAS.json.md
examples/: consumer.json  devtools.json  saas.json
schemas/: critic.output.schema.json  final.output.schema.json  generator.output.schema.json  merger.output.schema.json  mutator.output.schema.json  refiner.output.schema.json
scripts/: check_docs_coverage.sh  check_no_cyrillic.sh
src/: config.rs  data.rs  discovery.rs  llm.rs  main.rs  orchestrator.rs  phase.rs  scoring.rs  storage.rs
(+4 files in other folders)
